k8s/services/data-transform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-transform
  namespace: grupo-4
  labels:
    app: data-transform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-transform
  template:
    metadata:
      labels:
        app: data-transform
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9103"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: data-transform
          image: artmendy/data-transform:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: data-transform
  namespace: grupo-4
spec:
  selector:
    app: data-transform
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
