k8s/services/patient-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-data
  namespace: grupo-4
  labels:
    app: patient-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-data
  template:
    metadata:
      labels:
        app: patient-data
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: patient-data
          image: pspd/patient-data:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: patient-data
  namespace: grupo-4
spec:
  selector:
    app: patient-data
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
