k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pspd-ingress
  namespace: grupo-4
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: kiriland.unb.br
      http:
        paths:
          - path: /grupo4(/|$)(api/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /grupo4/jaeger(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
          - path: /grupo4(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
